--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 155px;
+  height: 80px;
   text-align: right;
 }
 
@@ -99,7 +99,7 @@ body {
   font-size: 70px;
   width: 700px;
   height: 58px;
-  margin: 30px auto 80px;
+  margin: 30px auto 60px;
   background-repeat: no-repeat;
   text-transform: uppercase;
 }
@@ -241,7 +241,7 @@ body {
    font-family: 'SofiaProLightRegular';
   display: block;
   line-height: 48px;
-  padding: 70px 20px 10px 20px;
+  padding: 40px 20px 10px 20px;
   font-size: 24px;
   color: #000;
   height: 190px;
@@ -271,12 +271,14 @@ body {
   text-align: center;
   width: 270px;
   color: #fff;
+  margin-right: 20px;
+  margin-top: -50px;
 }
 
 #links span {
 	display: block;
 	margin-left: 30px;
-	margin-top: 50px;
+	margin-top: 60px;
 	padding-bottom: 5px;
 	width: 250px;
 }
@@ -300,7 +302,7 @@ body {
 	display: block;
 	float: left;
 	text-align: left;
-	margin-top: 90px;
+	margin-top: 25px;
 }
 
 /* line 121, ../scss/style.scss */
