Temporary CSS Change
For the header loss

--- a/css/style.css
+++ b/css/style.css
@@ -373,8 +373,8 @@ body {
 
 
 .fuck_subtitle {
-	font-size: 25px;
-	text-transform: lowercase;
+	/*font-size: 25px;
+	text-transform: lowercase;*/
 }
 
 #share_this {
