--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,7 @@ div.fb-like  {
 	display: inline-block;
 	height: 20px;
 	float: right;
+	margin-top: -24px; /* For Idea Only */
 	margin-left: -60px;
 }
 
