--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,7 @@ div.fb-like  {
 	float: right;
 	margin-top: -24px; /* For Idea Only */
 	margin-left: -60px;
+	margin-right: 30px;
 }
 
 #frames div.frame div.text img {
